[package]
name = "nws-rs"
version = "0.0.1"
authors = ["Calvin Brown <cab025@protonmail.com>"]
edition = "2018"
repository = "https://github.com/calvinbrown085/nws-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
http = "0.2.1"
reqwest = {version = "0.10.8", features = ["blocking", "json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"